--- a/views/todos/all.pug
+++ b/views/todos/all.pug
@@ -4,5 +4,5 @@ block content
     ul
         for item in context
             li
-                a(href="/todos/" + item.id)
+                a.todo-item(href="/todos/" + item.id)
                     =item.text
