Added auth tests

--- a/views/_shared/_base.pug
+++ b/views/_shared/_base.pug
@@ -3,23 +3,44 @@ html(lang="en")
 head
     meta(charset="UTF-8")
     title Document
+    link(rel="stylesheet", href="/libs/bootstrap/dist/css/bootstrap.min.css")
     link(rel="stylesheet", href="/static/css/app.css")
+
 body
+    .row
+        .col-xs-12
+            nav
+                ul.nav
+                    li
+                        a#nav-btn-todos(href="/todos")
+                            | TODOs
+                    if user
+                        li.has-dropdown
+                            a.toggle(href="#")
+                                =user.username
+                            .dropdown.hidden
+                                ul.list
+                                    li
+                                        a(href="/auth/sign-out")
+                                            | Sign out
+                    else
+                         li.has-dropdown
+                            a.toggle(href="#")
+                                | User
+                            .dropdown.hidden
+                                ul.list
+                                    li
+                                        a(href='/auth/sign-in')
+                                            | Sign in
+                                    li
+                                        a(href='/auth/sign-up')
+                                            | Sign up
+
     .container
         .row
             .col-xs-12
-                nav
-                    ul.nav
-                        li
-                            a#nav-btn-todos(href="/todos")
-                                | TODOs
-                        li
-                            a(href='/auth/sign-up')
-                                | Sign up
-                        li
-                            a(href='/auth/sign-in')
-                                | Sign in
-        .row
-            .col-xs-12
                 block body
+    
+    script(src="/libs/jquery/dist/jquery.js")
+    script(src="/static/js/dropdown.js")
     
