--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -1,3 +1,14 @@
+.list {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+.list>li {
+    margin: 0;
+    padding: 0;
+}
+
 nav {
     background-color: red;
 }
@@ -9,7 +20,7 @@ nav {
     font-size: 0;
 }
 
-.nav li {
+.nav>li {
     display: inline-block;
     margin: 0;
     padding: 0;
@@ -25,11 +36,34 @@ nav {
     background-color: rgba(255, 255, 255, .3);
 }
 
-.nav a {
+.nav li a, .nav>li>a {
     color: white;
     text-decoration: none;
-    font-size: 1.1em;
-    display: block;
-    padding: 5px 15px;
+    display: inline-block;
+    width: 100%;
 }
 
+.nav>li>a {
+    padding: 10px 30px;
+    font-size: 1.1em;
+}
+
+.nav>li li a {
+    padding: 10px;
+}
+
+.has-dropdown {
+    position: relative;
+}
+
+.has-dropdown .dropdown {
+    z-index: 9999;
+    
+    position: absolute;
+    width: 100%;
+    background-color: red;
+}
+
+.has-dropdown .dropdown li {
+    font-size: 12px
+}
