--- a/views/_shared/_base.pug
+++ b/views/_shared/_base.pug
@@ -1,3 +1,5 @@
+include _nav
+
 <!DOCTYPE html>
 html(lang="en")
 head
@@ -9,36 +11,10 @@ head
 body
     .row
         .col-xs-12
-            nav
-                ul.nav
-                    li
-                        a#nav-btn-todos(href="/todos")
-                            | TODOs
-                    if user
-                        li.has-dropdown
-                            a.toggle(href="#")
-                                =user.username
-                            .dropdown.hidden
-                                ul.list
-                                    li
-                                        a(href="/auth/sign-out")
-                                            | Sign out
-                    else
-                         li.has-dropdown
-                            a.toggle(href="#")
-                                | User
-                            .dropdown.hidden
-                                ul.list
-                                    li
-                                        a(href='/auth/sign-in')
-                                            | Sign in
-                                    li
-                                        a(href='/auth/sign-up')
-                                            | Sign up
-
+            +nav(user)
     .container
         .row
-            .col-xs-12
+            .col-xs-12.text-center
                 block body
     
     script(src="/libs/jquery/dist/jquery.js")
