--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -33,7 +33,7 @@ nav {
 }
 
 .nav li:hover {
-    background-color: rgba(255, 255, 255, .3);
+    background-color: rgba(255, 255, 255, 0.3);
 }
 
 .nav li a, .nav>li>a {
